# sudoku

./: CMakeLists.txt  LICENSE
src/: mainwindow.cpp  mainwindow.h  sudoku.cpp  sudoku.h
